[project]
name = "z4j-taskiqscheduler"
version = "1.4.0"
description = "z4j scheduler adapter for taskiq schedule sources (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "taskiq", "scheduler", "cron"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core>=1.4.0,<2",
    "taskiq>=0.11,<1",
]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-taskiqscheduler/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-taskiqscheduler/issues"
Source = "https://github.com/z4jdev/z4j-taskiqscheduler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_taskiqscheduler"]
